# cork

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  save_image.cpp  setup.sh
console/: package.json
gui/corkselector/: camera_config.h  camera_input.h  camera_input.hpp  cork.h  cork.hpp  cork_analyser.h  cork_analyser.hpp  cork_config.h  corkselector.pro  cvgui.hpp  image_status.h  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qt_image.hpp  threshold.h  threshold.hpp
scripts/: camera.sh  setup.sh
source/: Configuration.cpp  Cork.cpp  ImageStatus.hpp  Threshold.hpp  camera_config.hpp  camera_input.hpp  config.hpp  configuration.hpp  cork.hpp  cork_analyser.hpp  cork_config.hpp  corkselector.pro  corkselector.pro.user.8c7b7fa  cvgui.hpp  gui.hpp  image_status.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qt_image.hpp  settings.ui  threshold.hpp
source/config/: camera_config.hpp  camera_configuration.hpp  configuration.hpp  detector_config.hpp
source/corkselector/: camera_config.hpp  camera_input.hpp  cork_config.hpp  corkselector.pro  main.cpp  mainwindow.hpp  mainwindow.ui
source/data/: cork.hpp
source/input/: camera_config.hpp  camera_input.hpp  image_status.hpp  tcam.hpp
